--- a/front/index.html
+++ b/front/index.html
@@ -12,12 +12,11 @@
     <input type="text" id="userSearchValue" />
     <div>
         
-    <input type="radio" id="capital"
-     value="capital">
-   <label for="contactChoice2">capital</label>
-
-    <input type="radio" id="capital"
-     value="capital">
+    <input type="radio" id="capiltal"
+    name="getData" value="capital">
+   <label for="contactChoice2">capiltal</label>
+    <input type="radio" id="country"
+    name="getData" value="countries">
    <label for="contactChoice2">countries</label>
     </div>
     <div class="data">
